@@ -24,6 +24,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14104: Implement time.monotonic() on Mac OS X, patch written by
+  Nicholas Riley.
+
 - Issue #13394: the aifc module now uses warnings.warn() to signal warnings.
 
 - Issue #14252: Fix subprocess.Popen.terminate() to not raise an error under
